# EvoSim

./: .gitignore  CMakeLists.txt  README.md  UML.md
ideas/: brain.py
src/: ActionEmitter.cpp  InputSensor.cpp  InputSensor.h  action_emitter.cpp  action_emitter.h  brain.cpp  brain.h  connection.h  creature.cpp  creature.h  dna.h  input_sensor.cpp  input_sensor.h  main.cpp  node.cpp  node.h  world.cpp  world.h
src/utils/: rng.h  vec2.h
